--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - html</a></title>
+  <title>WEB1 - html</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
+  <script src="colors.js"></script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+    <input type="button" value="night" onclick="
+      nightDayHandler(this);
+    ">
   <div id="grid">
     <ol>
       <li><a href="1.html">HTML</a></li>
